--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.13",
+    "swiper": "^11.1.15",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
